<resources>
    <string name="app_name">VirtualElaine</string>
    <string name="create_task">Create Task</string>
    <string name="due_date">Due Date</string>
    <string name="title">Title</string>
    <string name="set_date">Set due Date &amp; Time</string>
    <string name="set_label">Set Label</string>
    <string name="comment">Comment...</string>
    <string name="save">Save</string>
    <string name="create_label">Create Label</string>
    <string name="app_info">App Info</string>
    <string name="select_color">Select Colour</string>
    <string name="description">Description...</string>
    <string name="by_label">By Label</string>
    <string name="by_date">By Date</string>
    <string name="by_title">By Title</string>
    <string name="example_task">Example Task Title</string>
    <string name="example_task_description">Example Task Description</string>
    <string name="example_label">Example Label</string>
    <string name="example_label_description">Example Label Description</string>
    <string name="sample">Sample</string>
    <string name="example_due_date">1/01/1970 0:00 (∞ days)</string>


</resources>
