<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewTaskActivity">

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_edit_text">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_dateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkable="false"
            android:text="@string/set_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:chipIcon="@drawable/ic_date_range_24dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkable="false"
            android:text="@string/set_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:chipIcon="@drawable/ic_label_outline_24dp" />
    </com.google.android.material.chip.ChipGroup>

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="406dp"
        android:layout_height="570dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>